GPencil: Transform fill and Adjust Last Operation panel do not work #76522

Closed
opened 2020-05-07 23:04:06 +02:00 by dupoxy · 17 comments
Contributor

System Information
Operating system: Darwin-17.7.0-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GTX 680MX OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.32.0 355.11.10.10.40.102

Blender Version
Broken version: 2.83 (sub 15), branch: master, commit date: 2020-05-05 22:28, hash: c036ef1369
Broken version: 2.90
Worked: ?
Short description of error
Transform fill and Adjust Last Operation panel do not work

Exact steps for others to reproduce the error

  1. open file transform-fill_v000.blend
  2. try changing the mode of transform fill with the Last Operation panel
    Notice that it does not work

Do the same with the Tool Sidebar and it work
2020-05-07 22-59-13.mp4

Step by Step

  1. Start a new 2D animation
  2. Draw a grease Pencil object with a Radial Gradient Fill material
  3. Now edit this object with the transform fill tool and try changing the mode of transform fill with the Last Operation panel
    Notice that it does not work
**System Information** Operating system: Darwin-17.7.0-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GTX 680MX OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.32.0 355.11.10.10.40.102 **Blender Version** Broken version: 2.83 (sub 15), branch: master, commit date: 2020-05-05 22:28, hash: `c036ef1369` Broken version: 2.90 Worked: ? **Short description of error** Transform fill and Adjust Last Operation panel do not work **Exact steps for others to reproduce the error** 1. open file [transform-fill_v000.blend](https://archive.blender.org/developer/F8519002/transform-fill_v000.blend) 2. try changing the mode of transform fill with the Last Operation panel Notice that it does not work Do the same with the Tool Sidebar and it work [2020-05-07 22-59-13.mp4](https://archive.blender.org/developer/F8519038/2020-05-07_22-59-13.mp4) **Step by Step** 1. Start a new 2D animation 2. Draw a grease Pencil object with a Radial Gradient Fill material 3. Now edit this object with the transform fill tool and try changing the mode of transform fill with the Last Operation panel Notice that it does not work
Author
Contributor

Added subscriber: @dupoxy

Added subscriber: @dupoxy
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by a116912fd6

This issue was referenced by a116912fd62d9d611bb767b5b6ee90b311cb52c7

Added subscriber: @antoniov

Added subscriber: @antoniov

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Antonio Vazquez self-assigned this 2020-05-11 16:51:29 +02:00

Just need set View Toolsettings.

image.png

image.png

Tnaks for the report, but we can close the report because it's not a bug.

Just need set View Toolsettings. ![image.png](https://archive.blender.org/developer/F8528278/image.png) ![image.png](https://archive.blender.org/developer/F8528281/image.png) Tnaks for the report, but we can close the report because it's not a bug.
Member

Not sure this is resolved:

  • yes, Toolsettings and Active Tool sidebar works [setting it prior is OK]
  • changing it (e.g. Rotate to Scale )in Adjust Last Operation more or less breaks -- it doesnt really make sense to do this even I think [maybe exec should be removed entirely? So we dont have the Adjust Last Operation panel at all?]
  • also: calling Transform Stroke Fill from the menu search {key F3} cannot be undone {key Ctrl Z} doesnt do anything...

So there is something wrong with Undo/Redo?

Not sure this is resolved: - yes, Toolsettings and Active Tool sidebar works [setting it **prior** is OK] - changing it (e.g. Rotate to Scale )in `Adjust Last Operation` more or less breaks -- it doesnt really make sense to do this even I think [maybe exec should be removed entirely? So we dont have the `Adjust Last Operation` panel at all?] - also: calling Transform Stroke Fill from the menu search {key F3} cannot be undone {key Ctrl Z} doesnt do anything... So there is something wrong with Undo/Redo?
Author
Contributor

Sorry but this does not work as expected.
What should i do reopen a new bug ?

Sorry but this does not work as expected. What should i do reopen a new bug ?
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Member

@antoniov : maybe this is a misunderstanding, but yes, I think this is still an issue...

@antoniov : maybe this is a misunderstanding, but yes, I think this is still an issue...

sorry..I missunderstood the problem. I going to look again.

sorry..I missunderstood the problem. I going to look again.

Proposed fix in D7741

Proposed fix in [D7741](https://archive.blender.org/developer/D7741)

This issue was referenced by 825d5c9992

This issue was referenced by 825d5c9992b2698d0e38cfec952593b0b15caa18

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Fixed with commit 825d5c9992

Fixed with commit 825d5c9992b2
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76522
No description provided.